loader added while saving order

--- a/burger-project/src/components/UI/Spinner/Spinner.css
+++ b/burger-project/src/components/UI/Spinner/Spinner.css
@@ -1,9 +1,9 @@
-.loader,
-.loader:before,
-.loader:after {
+.Loader,
+.Loader:before,
+.Loader:after {
   border-radius: 50%;
 }
-.loader {
+.Loader {
   color: #521751;
   font-size: 11px;
   text-indent: -99999em;
@@ -16,15 +16,15 @@
   -ms-transform: translateZ(0);
   transform: translateZ(0);
 }
-.loader:before,
-.loader:after {
+.Loader:before,
+.Loader:after {
   position: absolute;
-  content: '';
+  content: "";
 }
-.loader:before {
+.Loader:before {
   width: 5.2em;
   height: 10.2em;
-  background: #521751;
+  background: #ffffff;
   border-radius: 10.2em 0 0 10.2em;
   top: -0.1em;
   left: -0.1em;
@@ -33,10 +33,10 @@
   -webkit-animation: load2 2s infinite ease 1.5s;
   animation: load2 2s infinite ease 1.5s;
 }
-.loader:after {
+.Loader:after {
   width: 5.2em;
   height: 10.2em;
-  background: #521751;
+  background: #ffffff;
   border-radius: 0 10.2em 10.2em 0;
   top: -0.1em;
   left: 5.1em;
